# fast-device-detector

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust_device_detector.pyi
.github/workflows/: build-wheels.yml
examples/: simple_usage.py
python/device_detector/: __init__.py  __init__.pyi
python/fast_device_detector/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_device_detector.py
