[package]
name = "fast_device_detector"
version = "0.1.0"
edition = "2021"
authors = ["Aptoide <apptechnology.aptoide@gmail.com>", "Miguel Rebelo <miguel.python.dev@gmail.com>"]
description = "Python bindings for the Rust device detector library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/simplecastapps/rust-device-detector"

[lib]
name = "fast_device_detector"
crate-type = ["cdylib"]

[dependencies]
rust-device-detector = { git = "https://github.com/simplecastapps/rust-device-detector.git", branch = "main", features = ["cache"] }
pyo3 = { version = "0.24.0", features = ["extension-module"] }

[build-dependencies]
maturin = "1.5.1"
