[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast_device_detector"
version = "0.1.0"
description = "Python bindings for the Rust device detector library"
authors = [
    { name = "Aptoide", email = "apptechnology.aptoide@gmail.com" },
    { name = "Miguel Rebelo", email = "miguel.python.dev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
include = ["python/fast_device_detector/*.py", "python/fast_device_detector/*.pyi"] 